# yew_webgl2_game

./: Cargo.toml  README.md  index.html  trunk.toml
src/: main.rs
src/components/: basic.vert  chat.rs  game.rs  game_202.rs  game_303.rs  game_404.rs  game_505.rs  login.rs  mod.rs  old_game.rs  particles.rs
src/services/: websocket.rs
src/shaders/: bare.frag  bare.vert  basic.frag  particles.frag  particles.vert  torpedo_100.vert  vehicle_100.vert
